admin/css/fastcgi-cache-purge-and-preload-nginx.css
/* ... */
/* Style settings tab submenu items */
.nppp-submenu {
    margin-bottom: 20px;
}

.nppp-submenu ul {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 15px;
    margin-left: -12px;
    margin-top: 0px;
    border: 2px dotted #FFA500;
    max-width: max-content;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 10px;
    padding-bottom: 5px;
}

.nppp-submenu ul li {
    display: inline;
}

.nppp-submenu ul li a {
    text-decoration: none;
    color: #0073aa;
    font-weight: 600;
}

.nppp-submenu ul li a:hover {
    color: #00a0d2;
}

/* Responsive Adjustments */
@media (max-width: 600px) {
    .nppp-submenu ul {
        flex-direction: column;
        align-items: center;
        margin-left: 0;
        margin: 0 auto;
        max-width: 100%;
        padding-left: 0;
        padding-right: 0;
    }

    .nppp-button-link {
        width: 100%;
    }

    .nppp-submenu ul li a:focus {
        background-color: peachpuff !important;
    }
}

/* Responsive Adjustments for Tablets */
@media (min-width: 601px) and (max-width: 769px) {
    .nppp-submenu ul {
        flex-direction: column;
        align-items: center;
        margin-left: 0;
        margin: 0 auto;
        max-width: 100%;
        padding-left: 0;
        padding-right: 0;
    }

    .nppp-button-link {
        width: 100%;
    }

    .nppp-submenu ul li a:focus {
        background-color: peachpuff !important;
    }
}

/* Style form submit button changes */
.nppp-submit-changed {
    background-color: #a70000 !important;
    color: white !important;
}

/* Add transition for smooth color change */
#nppp-settings-form input[type="submit"].nppp-submit-changed {
    transition: background-color 0.3s ease, color 0.3s ease;
}

/* Custom style for jQuery UI theme */
.ui-widget {
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
    font-size: 1em;
}

/* Margin-top of 60px on wider screens */
@media (min-width: 1024px) {
    #nppp-status-tab > main > section.system-checks {
        margin-top: 60px;
    }
}

